- New command "Scheme Equality" to build a decidable (boolean) equality 
  for simple inductive datatypes and a decision property over this equality
  (e.g.  Scheme Equality for nat).
- Added option "Set Equality Scheme" to make automatic the declaration 
  of the boolean equality when possible.
- Source of universe inconsistencies now printed when option 
  "Set Printing Universes" is activated,
- Support for option "[id1 ... idn]", and "-[id1 ... idn]", for the 
  "compute"/"cbv" reduction strategy, respectively meaning reduce only, or 
  everything but, the constants id1 ... idn. "lazy" alone or followed by
  "[id1 ... idn]", and "-[id1 ... idn]" also supported, meaning apply
  all of beta-iota-zeta-delta, possibly restricting delta.
- New command "Strategy" to control the expansion of constants during
  conversion tests. It generalizes commands Opaque and Transparent by
  introducing a range of levels. Lower levels are assigned to constants
  that should be expanded first.

Libraries (DOC TO CHECK)

- New arithmetical libraries:
  - Numbers contains an abstract modular development of natural and integer
    arithmetics.
  - Ints contains a library of efficient computational bounded and
    unbounded integers that can be mapped to processor native arithmetics.
- Library IntMap, subsumed by FSets/FMaps, has been removed from 
  Coq Standard Library and moved into a user contribution Cachan/IntMap
- Better computational behavior of some constants (eq_nat_dec and 
  le_lt_dec more efficient, Z_lt_le_dec and Positive_as_OT.compare 
  transparent, ...) (exceptional source of incompatibilities).
- Boolean operators moved from module Bool to module Datatypes (may need
  to rename qualified references in script)
- Improvements to NArith (Nminus, Nmin, Nmax), and to QArith (in particular 
  a better power function). 
- In SetoidList, eqlistA now expresses that two lists have similar elements 
  at the same position, while the predicate previously called eqlistA 